# Synapse

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.single  README.md  config.yaml  docker-compose.single.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agent_resources/: AUDIT_code_minimalism.md  PLANNING_TEMPLATE.md  PLAN_achievements_v2.md  PLAN_code_minimalism_audit.md  PLAN_dashboard_quality_overhaul.md  README.md  TECHNICAL_DEBT.md  WORK_TRACKER_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 30a6c3f7d3eb_achievement_system_v2_categories_.py  99b1d42a3d9c_add_event_lake_and_event_counters_tables.py  a1b2c3d4e5f6_drop_quests_table.py  (+6 more)
dashboard/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.js
docker/: start-all.sh
docs/: API.md  ARCHITECTURE.md  AUDIT_REMEDIATION.md  AUDIT_REPORT.md  BOT.md  DASHBOARD.md  DATABASE.md  DEPLOYMENT.md  Discord API Audit for Synapse.md  ECONOMY.md  EVENT_LAKE.md  IMPLEMENTATION_DECISIONS.md  INDEX.md  PLAN_OF_ATTACK_P4.md  REQUIREMENTS_TRACE.md  SELF_HOSTING.md
seeds/: achievements.yaml  settings.yaml  zones.yaml
synapse/: __init__.py  config.py  constants.py
tests/: conftest.py  test_achievements.py  test_announcements.py  test_anti_gaming.py  test_api_routes.py  test_backfill_integration.py  test_bootstrap.py  test_cache.py  test_channel_sync.py  test_event_lake.py  test_event_lake_services.py  test_jwt_startup.py  test_rate_limit.py  test_reward_engine.py  test_reward_service.py
(+117 files in other folders)
